--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -10,7 +10,7 @@
             Refer Friends and get assured prizes.
         </li>
         <li><b>4.</b>
-            Get Maximum Likes and Win.
+            Get Maximum Votes.
         </li>
     </ul>
 
@@ -18,11 +18,11 @@
         <input type="hidden" name="PHPSESSID" value="<?php echo session_id(); ?>" />
         <strong># A TABLE FOR
 </strong>
-        <input name="comment" type="text" maxlength="20">
+        <input name="comment" type="text" maxlength="30">
         <input name="optionchosen" value="1" type="hidden">
         <input name="" type="submit" value="Submit" />
         <em>Submit a snappy caption that may be feature in our outdoor advertising at Cyber Hub
-</em><span>OR</span>
+</em><span class="or">OR</span>
     </form>
     <form class="table1" style="margin-top:5px" enctype="multipart/form-data" method="post" action="champ.php" name="photoform" onsubmit="return validatephotoform()">
         <input type="hidden" name="PHPSESSID" value="<?php echo session_id(); ?>" />
