--- a/css/american.css
+++ b/css/american.css
@@ -65,9 +65,9 @@ body { width:700px; background:url(../images/base.png) no-repeat; margin:0 auto;
     display: block;
     font-size: 36px; text-align:left; margin:0; }
 .table1 span { font-size:26px; display:block; text-align:left; width:100%; padding:10px 0; color:#505151; }
-
-.table1 input[type="text"],#browse  { width:400px; background:#dedfe0; border:none; padding:10px 0; }
-
+.table1 span.or{text-align:center}
+.table1 input[type="text"],#browse  { width:400px; background:#dedfe0; border:none; padding:10px 0px; }
+.table1 input[type="text"]{padding:10px 5px;float:left;font-size:15px }
 #browse {
     
     display: block;
@@ -94,7 +94,7 @@ body { width:700px; background:url(../images/base.png) no-repeat; margin:0 auto;
 
 .table1 em { display: block;
     font-family: Arial,Helvetica,sans-serif;
-    font-size: 12px;
+    font-size: 13px;
     font-style: normal;
     padding: 10px 0;
     text-align: left;
@@ -126,7 +126,7 @@ body { width:700px; background:url(../images/base.png) no-repeat; margin:0 auto;
 }
 .champsp strong { display:block; font-family:libre_baskervilleregular; width:100%; font-size:45px; font-weight:normal; line-height:36px;   }
 .champsp a { text-decoration:none;}
-.champsp u { text-decoration:none; font:normal 16px arial; color:#8e8e8e; display:block; margin-bottom:10px;}
+.champsp u { text-decoration:none; font:normal 16px arial; color:#333; display:block; margin-bottom:20px;margin-top:5px}
 .spofld { background:url(../images/lid.png) no-repeat; width:512px; height:481px; margin:10px 0 0 46px;  }
 .spofld ul { list-style:none; margin:172px 0 0 120px; padding:0; float:left; }
 .spofld li { border-bottom:solid 1px #c4ab85; width:250px; padding:7px 0; float:left;    }
@@ -156,10 +156,10 @@ body { width:700px; background:url(../images/base.png) no-repeat; margin:0 auto;
 .card .leftcol1 span { display:block; margin:60px 0 0 0px;}
 .card .leftcol1 p { width:565px;  text-align:center; font-family: libre_baskervilleregular;
     font-size: 18px; color:#585858;}
-.card .leftcol1 p strong {  font-size: 65px;
-    line-height: 0;
+.card .leftcol1 p strong {  font-size: 45px;
+    line-height: 50px;
     margin-bottom: 25px;
-    margin-top: 65px;
+    margin-top: 25px;
     padding: 0;} 
 
 	
