--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -1,5 +1,5 @@
 <div class="champ"><strong>CHAMPIONS</strong>
-    American Express gives you a chance to win table for two
+    American Express gives you a chance to win a gift voucher worth Rs. 2000
     <ul class="cyberhub">
         <li><b>1.</b>
             Add a caption or upload a selfie.</li>
@@ -7,10 +7,10 @@
             Share with friends for likes.
         </li>
         <li><b>3.</b>
-            Refer Friends and get assured prizes.
+            Get maximum votes
         </li>
         <li><b>4.</b>
-            Get Maximum Votes.
+            Win yourself a gift voucher
         </li>
     </ul>
 
