thanku page changes

--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -1,3 +1,4 @@
+<div id="opaque"></div>
 <div class="champ"><strong>CHAMPIONS</strong>
     American Express gives you a chance to win a gift voucher worth Rs. 2000
     <ul class="cyberhub">
