--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -44,7 +44,7 @@ caption of our choice!
 <div class="bottomborder">
     <p class="btext">
         Want these offers, but don't have an
-American Express&reg; Card? <a href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
+American Express&reg; Card? <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
     </p>
 </div>
 
