--- a/css/american.css
+++ b/css/american.css
@@ -91,7 +91,7 @@ body { width:700px; background:url(../images/base1.png) no-repeat; margin:0 auto
 
  input[type="submit"],a.link{ width:120px; background:#3e513d; border:none; padding:5px 0; color:#fff; 
 	font-size:20px; font-family:'libre_baskervilleregular'; text-transform:uppercase;}
-a.link{width:auto;padding:5px;margin:5px 10px 5px 0px;text-decoration:none;font-size:17px;}
+a.link{width:auto;padding:5px;margin:5px 10px 5px 0px;text-decoration:none;font-size:17px;float:left}
 .table1 em { display: block;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 14px;
