--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -22,7 +22,7 @@
         <input name="comment" type="text" maxlength="30">
         <input name="optionchosen" value="1" type="hidden">
         <input name="" type="submit" value="Submit" />
-        <em>Submit a snappy caption that may be feature in our outdoor advertising at Cyber Hub
+        <em>Submit a snappy caption that may feature in our outdoor advertsing at Cyberhub
 </em><span class="or">OR</span>
     </form>
     <form class="table1" style="margin-top:5px" enctype="multipart/form-data" method="post" action="champ.php" name="photoform" onsubmit="return validatephotoform()">
@@ -35,8 +35,8 @@
         <input name="" type="submit" value="Upload">
 <br/>    
     <em>Smile &amp; take a dazzling selfie, tag your location and upload the picture.
-If you do not chose a caption, your selfie will be be tagged with a
-caption of our choice!
+<!--If you do not chose a caption, your selfie will be be tagged with a
+caption of our choice!-->
 </em>
     </form>
 
