--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -28,7 +28,7 @@
     <form class="table1" style="margin-top:5px" enctype="multipart/form-data" method="post" action="champ.php" name="photoform" onsubmit="return validatephotoform()">
         <input type="hidden" name="PHPSESSID" value="<?php echo session_id(); ?>" />
         <label id="browse">
-				<i id="file_url"></i>	
+				<i id="file_url"><ab>Select a selfie</ab></i>	
 			<input name="file" type="file" id="id_file">
         </label>
         <input name="optionchosen" value="2" type="hidden">
