--- a/css/american.css
+++ b/css/american.css
@@ -88,9 +88,16 @@ body { width:700px; background:url(../images/base1.png) no-repeat; margin:0 auto
 	width:400px;
 	height:28px;
 }
-#browse i{font-size:15px;text-decoration:none}
+#browse i {
+    float: left;
+    font-size: 14px;
+    font-style: normal;
+    padding: 6px 0 0 5px;
+    text-align: left;
+}
+#browse i ab{width:auto;color:#999}
  input[type="submit"],a.link{ width:120px; background:#3e513d; border:none; padding:5px 0; color:#fff; 
-	font-size:20px; font-family:'libre_baskervilleregular'; text-transform:uppercase;}
+	font-size:20px; font-family:'libre_baskervilleregular'; text-transform:uppercase;cursor:pointer;}
 a.link{width:auto;padding:5px;margin:5px 10px 5px 0px;text-decoration:none;font-size:17px;float:left}
 .table1 em { display: block;
     font-family: Arial,Helvetica,sans-serif;
