--- a/css/american.css
+++ b/css/american.css
@@ -98,7 +98,8 @@ body { width:700px; background:url(../images/base1.png) no-repeat; margin:0 auto
 #browse i ab{width:auto;color:#999}
  input[type="submit"],a.link{ width:120px; background:#3e513d; border:none; padding:5px 0; color:#fff; 
 	font-size:20px; font-family:'libre_baskervilleregular'; text-transform:uppercase;cursor:pointer;}
-a.link{width:auto;padding:5px;margin:5px 10px 5px 0px;text-decoration:none;font-size:17px;float:left}
+input[type="submit"]{background:#2a5665;}
+	a.link{width:auto;padding:5px;margin:5px 10px 5px 0px;text-decoration:none;font-size:17px;float:left}
 .table1 em { display: block;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 14px;
@@ -145,7 +146,7 @@ a.link{width:auto;padding:5px;margin:5px 10px 5px 0px;text-decoration:none;font-
     font-weight: normal; color:#fff; padding:7px 15px;  }
 	.hgt { height:55px;}
 .fontst { color:#585858; font-size:35px !important;}
-.card { background:url(../images/bg.png) no-repeat; width:600px; height:350px; }
+.card { /*background:url(../images/bg.png) no-repeat;*/ width:600px; height:350px; }
 .topbor { position:absolute; }
 .card .rytimg { float:right; margin:20px 0 0 0 ;  }
 .card .leftcol { width:236px; float:left; margin:0 0 0 22px;}
