--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -1,6 +1,6 @@
 <div id="opaque"></div>
 <div class="champ"><strong>CHAMPIONS</strong>
-   <span class="pull-left spntxt" > At Cyber Hub, we call it a Table For Gupshup, Fun, Brainstorming, Friends? How would you like to describe your table? Complete the phrase to  participate:</span>
+   <span class="pull-left spntxt" > At Cyber Hub, we call it a Table For Gupshup, Fun, Brainstorming, Friends. How would you like to describe your table? Complete the phrase to  participate:</span>
 <!--
     <ul class="cyberhub">
         <li><b>1.</b>
@@ -24,13 +24,13 @@
         <input name="comment" type="text" maxlength="30">
         <input name="optionchosen" value="1" type="hidden">
         <input name="" type="submit" value="Submit" />
-        <span class="spntxt pull-left">Complete the caption and #ATableFor and we may just publish it in CyberHub
+        <span class="spntxt pull-left">Complete the caption #ATableFor and we may just publish it in CyberHub
 </span>
 <br/><br/><br/>
 <span class="or">OR</span>
     </form>
 	<br/>
-	<span class="spntxt pull-left" style="margin-top:5px">Click a picture of yourself, aka selfie, tag its location, select a phrase and upload:</span>
+	<span class="spntxt pull-left" style="margin-top:2px">Click a picture of yourself, aka selfie, tag its location, select a phrase and upload:</span>
 
     <form class="table1" style="margin-top:5px" enctype="multipart/form-data" method="post" action="champ.php" name="photoform" onsubmit="return validatephotoform()">
         <input type="hidden" name="PHPSESSID" value="<?php echo session_id(); ?>" />
@@ -41,18 +41,20 @@
         <input name="optionchosen" value="2" type="hidden">
         <input style="padding:3px 0" name="" type="submit" value="Upload">
 <br/>    
-    <em>upload a selfie,tag its location and select a caption.
+    <span class="spntxt pull-left" style="margin-top:2px">Upload a selfie,tag its location and select a caption.
 <!--If you do not chose a caption, your selfie will be be tagged with a
 caption of our choice!-->
-</em>
+</span>
     </form>
-<span class="pull-left spntxt">6 American Express Gift Vouchers to be won every week</span>
+<span class="pull-left spntxt"style="margin-top:20px">6 American Express Gift Vouchers to be won every week</span>
+
+<span class="pull-left spntxt" style="margin-top:60px">
+        Want these offers, but don't have an
+American Express&reg; Card? <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
+    </span>
 </div>
 
 <div class="bottomborder">
-    <p class="btext">
-        Want these offers, but don't have an
-American Express&reg; Card? <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
-    </p>
+    
 </div>
 
