--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -1,6 +1,6 @@
 <div id="opaque"></div>
 <div class="champ"><strong>CHAMPIONS</strong>
-   <span class="pull-left spntxt" > At Cyber Hub, we call it a Table For Gupshup, Fun, Brainstorming, Friends. How would you like to describe your table? Complete the phrase to  participate:</span>
+   <span class="pull-left spntxt" > At Cyber Hub, we call it a Table For Gup-shup, Cheers, Friends and Family. How would you like to describe your table? Complete the phrase to  participate:</span>
 <!--
     <ul class="cyberhub">
         <li><b>1.</b>
@@ -24,7 +24,7 @@
         <input name="comment" type="text" maxlength="30">
         <input name="optionchosen" value="1" type="hidden">
         <input name="" type="submit" value="Submit" />
-        <span class="spntxt pull-left">Complete the caption #ATableFor and we may just publish it in CyberHub
+        <span class="spntxt pull-left">Complete the caption #ATableFor 
 </span>
 <br/><br/><br/>
 <span class="or">OR</span>
@@ -48,13 +48,13 @@ caption of our choice!-->
     </form>
 <span class="pull-left spntxt"style="margin-top:20px">6 American Express Gift Vouchers to be won every week</span>
 
-<span class="pull-left spntxt" style="margin-top:60px">
-        Want these offers, but don't have an
-American Express&reg; Card? <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
-    </span>
+
 </div>
 
 <div class="bottomborder">
-    
+   <span class="offer">
+        Want these offers, but don't have an
+American Express&reg; Card?<br/> <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
+    </span> 
 </div>
 
