--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -1,6 +1,6 @@
 <div id="opaque"></div>
 <div class="champ"><strong>CHAMPIONS</strong>
-   <span class="pull-left spntxt" > At Cyber Hub, we call it a Table For Gup-shup, Cheers, Friends and Family. How would you like to describe your table? Complete the phrase to  participate:</span>
+   <span class="pull-left spntxt"> We invite you to contribute to this spirit by completing the phrase below or uploading a selfie. X lucky winners every week stand a chance to win an American Express&reg; Gift Card which shall get you a complimentary table for two in Cyber Hub.</span>
 <!--
     <ul class="cyberhub">
         <li><b>1.</b>
@@ -46,13 +46,13 @@
 caption of our choice!-->
 </span>
     </form>
-<span class="pull-left spntxt"style="margin-top:20px">6 American Express Gift Vouchers to be won every week</span>
+<span class="pull-left spntxt"style="margin-top:20px">6 American Express Gift Cards to be won every week</span>
 
 
 </div>
 
 <div class="bottomborder">
-   <span class="offer">
+   <span class="spntxt pull-left">
         Want these offers, but don't have an
 American Express&reg; Card?<br/> <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
     </span> 
