--- a/css/american.css
+++ b/css/american.css
@@ -14,10 +14,8 @@
 
 }
 
-
-
-html {width:700px;margin:0 auto;}
-body { width:700px; background:url(../images/base1.png) 0px -15px no-repeat; margin:0 auto; padding:0; font-family:libre_baskervilleregular;}
+html {width:900px;margin:0 auto;background:#fff}
+body { width:900px; /*background:url(../images/base1.png) 0px -15px no-repeat;*/background:#f2f2f2; margin:0 auto; padding:0; font-family:libre_baskervilleregular;}
 * { margin:0; padding:0; list-style:none;}
 .bckno { background:none;}
 /*.table {
@@ -25,32 +23,35 @@ body { width:700px; background:url(../images/base1.png) 0px -15px no-repeat; mar
     width: 450px;
 }*/
 .table {
-    height: 90px;
+    height: 70px;
     margin: 0;
-    padding: 58px 50px 5px;
-    width: 85%;
+    padding: 40px 50px 5px;
+    width: 89%;
 }
-.table img{margin-left:155px;margin-top:20px}
-.table span { background:url(../images/logo.png) no-repeat; width:59px; height:51px; float:right; }
+.table img {
+    margin-left: 300px;
+    margin-top: 20px;
+}
+.table span { background:url(../images/logo.png) no-repeat; width:59px; height:51px; float:right;margin:15px 13px 0 0 }
 
 .champ { 
     font-family: libre_baskervilleregular;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: normal;
     margin: 0 auto;
     text-align: center;
-    width: 600px;
-	height:620px;
+    width: 880px;
+	height:460px;
 	
 }
-.champ strong { display:block; font-family:libre_baskervilleregular; width:100%; font-size:50px; font-weight:normal; margin-bottom:20px;  }
+.champ strong { display:block; font-family:libre_baskervilleregular; width:100%; font-size:30px; font-weight:normal; margin-bottom:10px;  }
 
 .pastry {   background: url("../images/pastry_.jpg") no-repeat scroll 0 0;
-    height: 380px;
+    height: 250px;
     margin: 15px auto 0;
     width: 647px;}
 	
-	.pastry .offers,.off { background:#073955; float:left; margin:20px 0 0 200px; padding:5px 10px; font-size:29px; }
+	.pastry .offers,.off { background:#073955; float:left; margin:20px 0 0 200px; padding:5px 10px; font-size:25px; }
 		.pastry .offers a,.off a { color:#fff; text-decoration:none;}
 .off {
     float: none;
@@ -59,9 +60,9 @@ body { width:700px; background:url(../images/base1.png) 0px -15px no-repeat; mar
     padding: 2px 6px;
 }
 			.bottomborder {
-    background: url("../images/bottom1.png") no-repeat scroll 27px center rgba(0, 0, 0, 0);
+    /*background: url("../images/bottom1.png") no-repeat scroll 27px center rgba(0, 0, 0, 0);*/
     height: 45px;
-    width: 673px;
+    width: 100%;
 	position:relative;
 }
 
@@ -133,7 +134,7 @@ body { width:700px; background:url(../images/base1.png) 0px -15px no-repeat; mar
  input[type="submit"],a.link{ width:120px; background:#3e513d; border:none; padding:5px 0; color:#fff; 
 	font-size:20px; font-family:'libre_baskervilleregular'; text-transform:uppercase;cursor:pointer;float:left}
 input[type="submit"]{background:#2a5665;}
-	a.link{width:auto;padding:5px;margin:5px 10px 5px 0px;text-decoration:none;font-size:17px;float:left}
+	a.link{width:auto;padding:5px;margin:5px 10px 5px 0px;text-decoration:none;font-size:14px;float:none}
 .table1 em { display: block;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 14px;
@@ -180,7 +181,7 @@ input[type="submit"]{background:#2a5665;}
 .champsp strong { display:block; font-family:libre_baskervilleregular; width:100%; font-size:35px; font-weight:normal; line-height:36px;   }
 .champsp a { text-decoration:none;}
 .champsp u { text-decoration:none; font-size:16px ; color:#333; display:block; margin-bottom:10px;margin-top:5px}
-.spofld { background:url(../images/lid.png) no-repeat; width:480px; height:481px; margin:3px 0 0 46px; float:left }
+.spofld { background:url(../images/lid.png) no-repeat; width:480px; height:481px; margin:3px 0 0 185px; float:left }
 .spofld ul { list-style:none; margin:172px 0 0 120px; padding:0; float:left; }
 .spofld li { border-bottom:solid 1px #c4ab85; width:250px; padding:7px 0; float:left;    }
 .spofld li span { width:60px; float:left; }
@@ -191,7 +192,7 @@ input[type="submit"]{background:#2a5665;}
     font-weight: normal; color:#fff; padding:7px 15px;  }
 	.hgt { height:55px;}
 .fontst { color:#585858; font-size:35px !important;}
-.card { /*background:url(../images/bg.png) no-repeat;*/ width:600px; height:350px; }
+.card { /*background:url(../images/bg.png) no-repeat;*/ width:100%; height:350px; }
 .topbor { position:absolute; }
 .card .rytimg { float:right; margin:20px 0 0 0 ;  }
 .card .leftcol { width:236px; float:left; margin:0 0 0 22px;}
@@ -260,4 +261,5 @@ input[type="submit"]{background:#2a5665;}
     z-index: 1000;
 }
 .pull-left{float:left}
-.spntxt{padding:5px !important;text-align:center !important;width:98.5% !important;font-size:16px !important;}
+.spntxt{padding:5px !important;text-align:center !important;width:98.5% !important;font-size:14px !important;}
+.bottomborder .spntxt{font-size:13px !important;}
